--- a/src/Lootepad/rc.qrc
+++ b/src/Lootepad/rc.qrc
@@ -16,5 +16,8 @@
         <file>res/33.png</file>
         <file>res/5.png</file>
         <file>res/21.png</file>
+        <file>res/6.png</file>
+        <file>res/36.png</file>
+        <file>res/28.png</file>
     </qresource>
 </RCC>
