--- a/src/ldecc/descc.ui
+++ b/src/ldecc/descc.ui
@@ -31,7 +31,7 @@
     <rect>
      <x>220</x>
      <y>10</y>
-     <width>61</width>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -75,13 +75,13 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>180</y>
      <width>361</width>
-     <height>77</height>
+     <height>79</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -125,12 +125,12 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>200</x>
      <y>260</y>
-     <width>176</width>
+     <width>195</width>
      <height>32</height>
     </rect>
    </property>
