--- a/src/ldecc/gencc.ui
+++ b/src/ldecc/gencc.ui
@@ -44,7 +44,7 @@
     <rect>
      <x>220</x>
      <y>10</y>
-     <width>31</width>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -64,7 +64,7 @@
     <rect>
      <x>150</x>
      <y>60</y>
-     <width>101</width>
+     <width>121</width>
      <height>27</height>
     </rect>
    </property>
@@ -103,7 +103,7 @@
     <rect>
      <x>120</x>
      <y>230</y>
-     <width>171</width>
+     <width>231</width>
      <height>22</height>
     </rect>
    </property>
@@ -137,12 +137,12 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>120</y>
-     <width>109</width>
+     <width>134</width>
      <height>80</height>
     </rect>
    </property>
