--- a/src/ldecc/safcc.ui
+++ b/src/ldecc/safcc.ui
@@ -57,7 +57,7 @@
     <rect>
      <x>220</x>
      <y>10</y>
-     <width>81</width>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -85,12 +85,12 @@
     <string>主页</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>40</x>
      <y>180</y>
-     <width>273</width>
+     <width>294</width>
      <height>32</height>
     </rect>
    </property>
@@ -111,7 +111,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>130</x>
