--- a/src/ldeframework/lithium/res.qrc
+++ b/src/ldeframework/lithium/res.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>themes/dark/LBaseButton.theme</file>
+        <file>themes/dark/LPushButton.theme</file>
         <file>themes/dark/LTextButton.theme</file>
     </qresource>
 </RCC>
